infrastructure/eks/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: clabbert
spec:
  type: ClusterIP
  selector:
    app: clabbert
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: inferius
spec:
  type: ClusterIP
  selector:
    app: inferius

  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: jobberknoll
spec:
  type: ClusterIP
  selector:
    app: jobberknoll

  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: leprechaun
spec:
  type: ClusterIP
  selector:
    app: leprechaun

  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: phoenix
spec:
  type: ClusterIP
  selector:
    app: phoenix

  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
